@@ -30,23 +30,22 @@ package org.hisp.dhis.analytics.table;
 import static java.lang.String.join;
 import static java.util.Collections.emptyList;
 import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
 import static org.hisp.dhis.analytics.AnalyticsTableType.TRACKED_ENTITY_INSTANCE;
-import static org.hisp.dhis.analytics.ColumnDataType.BOOLEAN;
-import static org.hisp.dhis.analytics.ColumnDataType.CHARACTER_11;
-import static org.hisp.dhis.analytics.ColumnDataType.DOUBLE;
-import static org.hisp.dhis.analytics.ColumnDataType.GEOMETRY;
-import static org.hisp.dhis.analytics.ColumnDataType.INTEGER;
-import static org.hisp.dhis.analytics.ColumnDataType.TEXT;
-import static org.hisp.dhis.analytics.ColumnDataType.TIMESTAMP;
-import static org.hisp.dhis.analytics.ColumnDataType.VARCHAR_1200;
-import static org.hisp.dhis.analytics.ColumnDataType.VARCHAR_255;
-import static org.hisp.dhis.analytics.ColumnDataType.VARCHAR_50;
-import static org.hisp.dhis.analytics.ColumnNotNullConstraint.NOT_NULL;
-import static org.hisp.dhis.analytics.ColumnNotNullConstraint.NULL;
-import static org.hisp.dhis.analytics.IndexType.GIST;
 import static org.hisp.dhis.analytics.table.JdbcEventAnalyticsTableManager.EXPORTABLE_EVENT_STATUSES;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.BOOLEAN;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.CHARACTER_11;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.DOUBLE;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.GEOMETRY;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.INTEGER;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.TEXT;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.TIMESTAMP;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.VARCHAR_255;
+import static org.hisp.dhis.analytics.table.model.ColumnDataType.VARCHAR_50;
+import static org.hisp.dhis.analytics.table.model.ColumnNotNullConstraint.NOT_NULL;
+import static org.hisp.dhis.analytics.table.model.ColumnNotNullConstraint.NULL;
+import static org.hisp.dhis.analytics.table.model.IndexType.GIST;
 import static org.hisp.dhis.analytics.util.AnalyticsSqlUtils.quote;
+import static org.hisp.dhis.analytics.util.AnalyticsUtils.getColumnType;
 import static org.hisp.dhis.analytics.util.DisplayNameUtils.getDisplayName;
 import static org.hisp.dhis.commons.util.TextUtils.removeLastComma;
 import static org.hisp.dhis.util.DateUtils.getLongDateString;
@@ -59,13 +58,13 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Stream;
 import org.apache.commons.collections4.CollectionUtils;
-import org.hisp.dhis.analytics.AnalyticsTable;
-import org.hisp.dhis.analytics.AnalyticsTableColumn;
 import org.hisp.dhis.analytics.AnalyticsTableHookService;
-import org.hisp.dhis.analytics.AnalyticsTablePartition;
 import org.hisp.dhis.analytics.AnalyticsTableType;
 import org.hisp.dhis.analytics.AnalyticsTableUpdateParams;
 import org.hisp.dhis.analytics.partition.PartitionManager;
+import org.hisp.dhis.analytics.table.model.AnalyticsTable;
+import org.hisp.dhis.analytics.table.model.AnalyticsTableColumn;
+import org.hisp.dhis.analytics.table.model.AnalyticsTablePartition;
 import org.hisp.dhis.analytics.table.setting.AnalyticsTableExportSettings;
 import org.hisp.dhis.category.CategoryService;
 import org.hisp.dhis.common.IdentifiableObjectManager;
@@ -226,10 +225,7 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
     params.addExtraParam("", PROGRAMS_BY_TET_KEY, programsByTetUid);
 
     return trackedEntityTypeService.getAllTrackedEntityType().stream()
-        .map(
-            tet ->
-                new AnalyticsTable(
-                    getAnalyticsTableType(), getTableColumns(params, tet), emptyList(), tet))
+        .map(tet -> new AnalyticsTable(getAnalyticsTableType(), getColumns(params, tet), tet))
         .toList();
   }
 
@@ -247,7 +243,7 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
   }
 
   @SuppressWarnings("unchecked")
-  private List<AnalyticsTableColumn> getTableColumns(
+  private List<AnalyticsTableColumn> getColumns(
       AnalyticsTableUpdateParams params, TrackedEntityType tet) {
     Map<String, List<Program>> programsByTetUid =
         (Map<String, List<Program>>) params.getExtraParam("", PROGRAMS_BY_TET_KEY);
@@ -284,8 +280,10 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
             .map(
                 tea ->
                     new AnalyticsTableColumn(
-                        quote(tea.getUid()), VARCHAR_1200, "\"" + tea.getUid() + "\".value"))
-            .collect(toList()));
+                        quote(tea.getUid()),
+                        getColumnType(tea.getValueType(), isSpatialSupport()),
+                        getSelectClause(tea.getValueType(), "\"" + tea.getUid() + "\".value")))
+            .toList());
 
     return columns;
   }
@@ -321,8 +319,7 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
    *
    * @return a List of {@link AnalyticsTableColumn}.
    */
-  @Override
-  public List<AnalyticsTableColumn> getFixedColumns() {
+  private List<AnalyticsTableColumn> getFixedColumns() {
     List<AnalyticsTableColumn> allFixedColumns = new ArrayList<>(GROUP_BY_COLS);
     allFixedColumns.add(getOrganisationUnitNameHierarchyColumn());
     allFixedColumns.addAll(NON_GROUP_BY_COLS);
@@ -350,10 +347,7 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
   @SuppressWarnings("unchecked")
   protected void populateTable(
       AnalyticsTableUpdateParams params, AnalyticsTablePartition partition) {
-    List<AnalyticsTableColumn> dimensions = partition.getMasterTable().getDimensionColumns();
     List<AnalyticsTableColumn> columns = partition.getMasterTable().getColumns();
-
-    validateDimensionColumns(dimensions);
 
     StringBuilder sql = new StringBuilder("insert into " + partition.getTempTableName() + " (");
 
@@ -363,8 +357,8 @@ public class JdbcTeiAnalyticsTableManager extends AbstractJdbcTableManager {
 
     removeLastComma(sql).append(") select ");
 
-    for (AnalyticsTableColumn col : dimensions) {
-      sql.append(col.getAlias() + ",");
+    for (AnalyticsTableColumn col : columns) {
+      sql.append(col.getSelectExpression() + ",");
     }
 
     TrackedEntityType trackedEntityType = partition.getMasterTable().getTrackedEntityType();
